# jpm

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: install.rs
