[package]
name = "jpm"
version = "0.1.0"
edition = "2021"
description = "Another f***** javascript package manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.4"
